--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,49 @@
 .guitar {
     display: flex;
+    height: 100vh;
+    width: 100vh;
+}
+.controls {
+    height: 15vw;
+    width: 100vw;
+    margin: 1em;
+    display: flex;
+    justify-content: space-between;
+}
+.picks {
+    display: flex;
+    width: 40vw;
+    height: 15vw;
+    justify-content: flex-end;
+}
+.picks > * {
+    height: 64px;
+    width: 64px;
+}
+.backdrop {
+    display: flex;
+    width: 40vw;
+    height: 15vw;
+}
+.backdrop > * {
+    height: 64px;
+    width: 64px;
+    margin-left: 15px;
 }
 #neck {
-    height: 20em;
-    width: 70em;
+    height: 100vh;
+    width: 50rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: relative;
     background-image: url('./media/guitarWood.jpg');
+    background-repeat: no-repeat;
 }
 .string {
     height: 1rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+body {
+    background-image: url('./media/background.jpg')
 }
