--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,9 @@
     display: flex;
     height: 100vh;
     width: 100vh;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: center;
 }
 .controls {
     height: 15vw;
@@ -45,5 +48,6 @@
     margin-bottom: 1rem;
 }
 body {
-    background-image: url('./media/background.jpg')
+    background-image: url('./media/background.jpg');
+    background-size: cover;
 }
