--- a/src/style.css
+++ b/src/style.css
@@ -33,8 +33,8 @@
     margin-left: 15px;
 }
 #neck {
-    height: 90vh;
-    width: 50rem;
+    width: 757px;
+    height: 632px;
     display: flex;
     flex-direction: column;
     justify-content: center;
